--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "0.14.x",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.0",
@@ -28,7 +30,9 @@
     "eslint-plugin-react": "4.x",
     "less-loader": "^2.2.3",
     "pre-commit": "1.x",
-    "redux-devtools": "^3.2.0"
+    "redux-devtools": "^3.2.0",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11"
   },
   "pre-commit": [
     "lint"
